--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "react-assignment",
   "version": "1.0.0",
   "description": "React Assignment",
-  "start":"parcel index.html",
-  "build":"parcel build index.html",
-  "scripts": {
-    "test": "jest"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/YogiKrishna7/React-Assignment.git"
@@ -23,11 +18,18 @@
   },
   "homepage": "https://github.com/YogiKrishna7/React-Assignment#readme",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "parcel": "^2.13.3",
     "process": "^0.11.10"
+  },
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "serve": "http-server dist",
+    "qrcode": "qrcode-terminal http://<your-local-ip>:8080",
+    "clean": "parcel clean"
   }
 }
